
- Reworked setproctitle calls, giving an argument to -x should now
  really hide all traces of the original name, not only the arguments
  Also remove argument-info on normal (without -x) runs.
- Suggested changes (From Dag Wieers) to install-target applied 
- Change debug-output line-endings
- Change error message on 'connection closed' in analyze_HTTP

Changes to proxytunnel version 1.6.3 -- Mon Apr 10 12:48:02 CEST 2006

- Replaced call to getpass to getpass_x, which comes from openssh's
  readpassphrase.c. This should handle longer passwords on systems
  with broken (crappy) getpass calls (solaris/hpux)

Changes to proxytunnel version 1.6.2 -- Wed Mar  8 10:08:53 CET 2006

- Fix NTLM in stand-alone mode

Changes to proxytunnel version 1.6.1 -- Sat Feb 25 14:45:25 CET 2006

- FOSDEM build (www.fosdem.org)
- Do setproctitle and ssl stuff on 'standalone' mode too
- Changed scanning/malloc's for proxy-hostname, we could overflow there
- Ripped out setproctitle and replaced it with openssh's code from
  openbsd-compat/setproctitle.c, also took in strlcat/strlcpy
- Removed all non-default Makefiles (darwin/solaris/cygwin etc)
  uncomment the -D's in the regular Makefile for your system/config
- Removed extra message in closeall() function
- Removed Proctitle override message

Changes to proxytunnel version 1.6.0 -- Mon Feb  6 17:00:00 CET 2006

- Replaced -g/-G (proxy host and port) with -p proxy:post shorthand
- Replaced -d/-D (dest host and port) with -d host:post shorthand
- Dropped -n option (dottedquad)
- Small change to make compiler on tandem/hp-nonstop happy
  by Roberto Veldhoven
- Small change to work around broken proxies by Stephane Engel
- Changed client_len from size_t to socklen_t (64bit required)
- Makefile vars now no longer override environment versions
- Cleaned up the output, in quiet mode there are now no messages, in
  normal mode a lot less (unless verbose is on)
- Added proxy-bouncing support, courtesy of Dag Wieers, authentication